--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "devDependencies": {
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
@@ -35,9 +37,9 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-router-dom": "^6.9.0"
+    "styled-components": "^5.3.8"
   },
   "author": "lucazweb",
   "license": "ISC"
