--- a/package.json
+++ b/package.json
@@ -5,9 +5,20 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config=webpack.config.dev.js --open",
-    "build": "webpack --config=webpack.config.prod.js"
+    "build": "webpack --config=webpack.config.prod.js",
+    "test:watch": "jest --watch --no-cache"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.4.1",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-svg-transformer": "^1.0.0",
+    "jest-transform-stub": "^2.0.0",
+    "jest-transformer-svg": "^2.0.0",
+    "ts-jest": "^29.0.5",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@types/styled-components": "^5.1.26",
