--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/strict-boolean-expressions": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-misused-promises": "off",
+    "@typescript-eslint/no-namespace": "off",
     "@typescript-eslint/quotes": "off",
     "@typescript-eslint/return-await": "off",
     "@typescript-eslint/space-before-function-paren": "off",
