--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@faker-js/faker": "^7.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "styled-components": "^5.3.8"
   },
   "author": "lucazweb",
