--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "styled-components": "^5.3.8"
   },
